test/classes/nilability/if-object-1.good
if-object-1.chpl:8: In function 'test':
if-object-1.chpl:14: error: applying postfix-! to nil
if-object-1.chpl:14: note: variable obj is nil at this point
if-object-1.chpl:9: note: this statement may be relevant
if-object-1.chpl:8: In function 'test':
if-object-1.chpl:14: error: applying postfix-! to nil
if-object-1.chpl:14: note: variable obj is nil at this point
if-object-1.chpl:9: note: this statement may be relevant
if-object-1.chpl:8: In function 'test':
if-object-1.chpl:14: error: applying postfix-! to nil
if-object-1.chpl:14: note: variable obj is nil at this point
if-object-1.chpl:9: note: this statement may be relevant
if-object-1.chpl:8: In function 'test':
if-object-1.chpl:14: error: applying postfix-! to nil
if-object-1.chpl:14: note: variable obj is nil at this point
if-object-1.chpl:9: note: this statement may be relevant
